@@ -1,114 +1,128 @@
 /* XPM */
 static const char * status_detached_xpm[] = {
-"16 16 95 2",
-"  	g None",
-". 	g #0B0B0B",
-"+ 	g #131313",
-"@ 	g #363636",
-"# 	g #3E3E3E",
-"$ 	g #232323",
-"% 	g #2F2F2F",
-"& 	g #8C8C8C",
-"* 	g #CACACA",
-"= 	g #D1D1D1",
-"- 	g #AAAAAA",
-"; 	g #565656",
-"> 	g #0F0F0F",
-", 	g #2D2D2D",
-"' 	g #929292",
-") 	g #ACACAC",
-"! 	g #ABABAB",
-"~ 	g #A6A6A6",
-"{ 	g #A4A4A4",
-"] 	g #A3A3A3",
-"^ 	g #999999",
-"/ 	g #666666",
-"( 	g #0C0C0C",
-"_ 	g #0D0D0D",
-": 	g #404040",
-"< 	g #848484",
-"[ 	g #5C5C5C",
-"} 	g #545454",
-"| 	g #555555",
-"1 	g #636363",
-"2 	g #5D5D5D",
-"3 	g #202020",
-"4 	g #5E5E5E",
-"5 	g #272727",
-"6 	g #2B2B2B",
-"7 	g #262626",
-"8 	g #212121",
-"9 	g #1F1F1F",
-"0 	g #1C1C1C",
-"a 	g #1A1A1A",
-"b 	g #161616",
-"c 	g #1E1E1E",
-"d 	g #0E0E0E",
-"e 	g #676767",
-"f 	g #3A3A3A",
-"g 	g #464646",
-"h 	g #505050",
-"i 	g #686868",
-"j 	g #717171",
-"k 	g #111111",
-"l 	g #1D1D1D",
-"m 	g #282828",
-"n 	g #5F5F5F",
-"o 	g #B6B6B6",
-"p 	g #CFCFCF",
-"q 	g #BBBBBB",
-"r 	g #A0A0A0",
-"s 	g #989898",
-"t 	g #4B4B4B",
-"u 	g #414141",
-"v 	g #585858",
-"w 	g #B5B5B5",
-"x 	g #4A4A4A",
-"y 	g #303030",
-"z 	g #141414",
-"A 	g #121212",
-"B 	g #515151",
-"C 	g #595959",
-"D 	g #909090",
-"E 	g #626262",
-"F 	g #2C2C2C",
-"G 	g #171717",
-"H 	g #101010",
-"I 	g #3C3C3C",
-"J 	g #353535",
-"K 	g #3D3D3D",
-"L 	g #646464",
-"M 	g #7D7D7D",
-"N 	g #484848",
-"O 	g #343434",
-"P 	g #373737",
-"Q 	g #868686",
-"R 	g #7B7B7B",
-"S 	g #727272",
-"T 	g #525252",
-"U 	g #6C6C6C",
-"V 	g #6E6E6E",
-"W 	g #535353",
-"X 	g #393939",
-"Y 	g #383838",
-"Z 	g #2A2A2A",
-"` 	g #222222",
-" .	g #242424",
-"..	g #1B1B1B",
-"+.	g #191919",
-"          . + @ # $ .           ",
-"        % & * = = = - ; >       ",
-"    . , ' ) ! ~ { ] { ^ / (     ",
-"    _ : < [ } | | | | 1 2 _ .   ",
-"  ( 3 4 5 6 7 8 9 0 a b a c _   ",
-". d e f g h 4 i j ; k _ _ l _ . ",
-"( m n | o p q - r s 5 k _ _ _ ( ",
-"> t u v * = w [ g x y z d _ _ ( ",
-"A B # : C D ) E F $ l G H _ _ ( ",
-"z I [ J K I u e & L y G H _ _ ( ",
-"b 3 M N # K f O P Q R I > _ _ . ",
-"  $ P Q S 2 T ; U M j ; _ _ (   ",
-"  3 % J 2 V S V L W X + _ _     ",
-"    m Y % Z m ` 0 z d d _ .     ",
-"       ., Z 8 ..b + H (         ",
-"          ..+.b k d .           "};
+"16 16 109 2",
+"  	c None",
+". 	c #FF0000",
+"+ 	c #0B0B0B",
+"@ 	c #131313",
+"# 	c #363636",
+"$ 	c #3E3E3E",
+"% 	c #232323",
+"& 	c #2F2F2F",
+"* 	c #8C8C8C",
+"= 	c #CACACA",
+"- 	c #D1D1D1",
+"; 	c #AAAAAA",
+"> 	c #565656",
+", 	c #900606",
+"' 	c #8F0505",
+") 	c #9E1414",
+"! 	c #CC4242",
+"~ 	c #ACACAC",
+"{ 	c #ABABAB",
+"] 	c #A6A6A6",
+"^ 	c #A4A4A4",
+"/ 	c #A3A3A3",
+"( 	c #D04646",
+"_ 	c #B82E2E",
+": 	c #A71D1D",
+"< 	c #C63C3C",
+"[ 	c #B42A2A",
+"} 	c #545454",
+"| 	c #555555",
+"1 	c #B12727",
+"2 	c #B72D2D",
+"3 	c #0C0C0C",
+"4 	c #980E0E",
+"5 	c #B52B2B",
+"6 	c #9B1111",
+"7 	c #9D1313",
+"8 	c #212121",
+"9 	c #1F1F1F",
+"0 	c #960C0C",
+"a 	c #950B0B",
+"b 	c #940A0A",
+"c 	c #970D0D",
+"d 	c #0D0D0D",
+"e 	c #0E0E0E",
+"f 	c #676767",
+"g 	c #A41A1A",
+"h 	c #AA2020",
+"i 	c #AE2424",
+"j 	c #B92F2F",
+"k 	c #BD3333",
+"l 	c #910707",
+"m 	c #1D1D1D",
+"n 	c #282828",
+"o 	c #5F5F5F",
+"p 	c #DD5353",
+"q 	c #E85E5E",
+"r 	c #DF5555",
+"s 	c #D84E4E",
+"t 	c #D34949",
+"u 	c #CF4545",
+"v 	c #0F0F0F",
+"w 	c #4B4B4B",
+"x 	c #414141",
+"y 	c #585858",
+"z 	c #E95F5F",
+"A 	c #AB2121",
+"B 	c #A01616",
+"C 	c #141414",
+"D 	c #121212",
+"E 	c #515151",
+"F 	c #404040",
+"G 	c #595959",
+"H 	c #B62C2C",
+"I 	c #9A1010",
+"J 	c #171717",
+"K 	c #101010",
+"L 	c #3C3C3C",
+"M 	c #5C5C5C",
+"N 	c #353535",
+"O 	c #A51B1B",
+"P 	c #CA4040",
+"Q 	c #161616",
+"R 	c #202020",
+"S 	c #7D7D7D",
+"T 	c #A61C1C",
+"U 	c #A11717",
+"V 	c #A31919",
+"W 	c #C73D3D",
+"X 	c #C23838",
+"Y 	c #BE3434",
+"Z 	c #AF2525",
+"` 	c #6C6C6C",
+" .	c #C33939",
+"..	c #9F1515",
+"+.	c #A21818",
+"@.	c #BC3232",
+"#.	c #727272",
+"$.	c #6E6E6E",
+"%.	c #646464",
+"&.	c #535353",
+"*.	c #920808",
+"=.	c #9C1212",
+"-.	c #2A2A2A",
+";.	c #222222",
+">.	c #1C1C1C",
+",.	c #2D2D2D",
+"'.	c #1B1B1B",
+").	c #191919",
+"!.	c #111111",
+". . .     + @ # $ % +     . . . ",
+". . . . & * = - - - ; > , . . . ",
+". . ' ) ! ~ { ] ^ / ^ ( _ ' . . ",
+"  . ' : < [ } | | | 1 2 [ ' '   ",
+"  3 4 5 6 7 6 8 9 0 a b a c d   ",
+"+ e f g h i 5 j k 1 l ' ' m d + ",
+"3 n o | p q r s t u 6 l d d d 3 ",
+"v w x y = z p [ h A B C e d d 3 ",
+"D E $ F G ! s H ) I c J K d d 3 ",
+"C L M N O O : j P 2 B b K d d 3 ",
+"Q R S A T O g U V W X O , d d + ",
+"  % V W Y [ Z > `  .k 1 ' ' 3   ",
+"  4 ..+.[ @.#.$.%.&.g *.' ' .   ",
+". . =.V ..-.n ;.>.C e , ' ' . . ",
+". . . I ,.-.8 '.Q @ K 3 . . . . ",
+". . .     '.).Q !.e +     . . . "};
